# wiki_scraper

./: Cargo.toml
src/: main.rs  terminal_interface.rs
