[package]
name = "wiki_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
rayon = "1.10.0"
indicatif =  {version = "0.17.8", features = ["rayon"]}
clap = {version = "4.5.7 ", features = ["derive"]}